Making txt Files

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1048,50 +1048,260 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estamos indo bem!\n"
+      "Estamos indo bem fechamos lvbb125!\n",
+      "Estamos indo bem fechamos TTbar!\n",
+      "Estamos indo bem fechamos Wbb!\n",
+      "Estamos indo bem fechamos Wbl!\n",
+      "Estamos indo bem fechamos Wll!\n",
+      "Estamos indo bem fechamos Wcl!\n",
+      "Estamos indo bem fechamos Wcc!\n",
+      "Estamos indo bem fechamos WW!\n",
+      "Estamos indo bem fechamos WZ!\n",
+      "Estamos indo bem fechamos ZZ!\n"
      ]
     }
    ],
    "source": [
-    "data_input = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet/lvbb125.root\"\n",
-    "treeName = \"perevent\"\n",
+    "processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
+    "#processes = \"ZZ\"\n",
+    "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/TxtFiles\"\n",
     "\n",
-    "file = ROOT.TFile(data_input,\"READ\")\n",
-    "tree = file.Get(treeName)\n",
-    "\n",
-    "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results\"\n",
-    "\n",
-    "nrEvents = 5\n",
-    "\n",
-    "processes = \"lvbb125\"\n",
-    "#processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
+    "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
     "\n",
     "\n",
-    "text_file = open(output+\"/\"+\"Output_\"+processes+\".txt\", \"w\")\n",
     "\n",
-    "for (i,entry) in enumerate(tree):\n",
-    "    if nrEvents>0:\n",
-    "        if i>nrEvents:\n",
-    "            break\n",
+    "\n",
+    "#nrEvents = 10\n",
+    "\n",
+    "#ylabel = \"Occurrences\"\n",
+    "\n",
+    "\n",
+    "for process in processes.split(\",\"):\n",
+    "    data_input = data_path+\"/\"+process+\".root\"\n",
+    "    treeName = \"perevent\"\n",
+    "    file = ROOT.TFile(data_input,\"READ\")\n",
+    "    tree = file.Get(treeName)\n",
+    "    nrEvents = tree.GetEntries()\n",
+    "\n",
+    "    text_file = open(output+\"/\"+\"TxtFile_\"+process+\".txt\", \"w\")\n",
+    "\n",
+    "    for (i,entry) in enumerate(tree):\n",
+    "        if nrEvents>0:\n",
+    "            if i>nrEvents:\n",
+    "                break\n",
     "            \n",
-    "# variables for j1.     \n",
-    "    E1 = tree.j1_EM_E\n",
+    "        # variables for EM j1.     \n",
+    "        E1_EM = tree.j1_EM_E\n",
+    "        Phi1_EM = tree.j1_EM_Phi\n",
+    "        Eta1_EM = tree.j1_EM_Eta\n",
+    "        Pt1_EM = tree.j1_EM_Pt\n",
     "    \n",
-    "    Eta = tree.j1_EM_Eta\n",
+    "        # variables for EM j2.     \n",
+    "        E2_EM = tree.j2_EM_E\n",
+    "        Phi2_EM = tree.j2_EM_Phi\n",
+    "        Eta2_EM = tree.j2_EM_Eta\n",
+    "        Pt2_EM = tree.j2_EM_Pt\n",
+    "        \n",
+    "        # PtRel in EM\n",
+    "        Theta1_EM = AuxiliarFunctions.theta(Eta1_EM)\n",
+    "        Comp1_EM = AuxiliarFunctions.Componets(E1_EM,Eta1_EM,Phi1_EM,Theta1_EM)\n",
+    "        norm1_EM = AuxiliarFunctions.norm(Comp1_EM)\n",
+    "        \n",
+    "        Theta2_EM = AuxiliarFunctions.theta(Eta2_EM)\n",
+    "        Comp2_EM = AuxiliarFunctions.Componets(E2_EM,Eta2_EM,Phi2_EM,Theta2_EM)\n",
+    "        norm2_EM = AuxiliarFunctions.norm(Comp2_EM)\n",
     "    \n",
+    "        # sum of components.\n",
+    "        Comp3_EM = AuxiliarFunctions.somaComponents(Comp1_EM,Comp2_EM)\n",
+    "        norm3_EM = AuxiliarFunctions.norm(Comp3_EM)\n",
+    "        numerador1_EM = AuxiliarFunctions.numerador(Comp1_EM,Comp3_EM)    \n",
+    "        angle1_EM = AuxiliarFunctions.alpha(numerador1_EM,norm1_EM,norm3_EM)\n",
     "    \n",
+    "        #compute Relative Pt\n",
+    "        PtRel_j1_EM = AuxiliarFunctions.PtRelative(E1_EM,angle1_EM)\n",
+    "    \n",
+    "        # only for EM and j1.\n",
+    "        j1_FracEM3 = tree.j1_FracEM3\n",
+    "        j1_FracTile0 = tree.j1_FracTile0\n",
+    "        j1_TrkWidth = tree.j1_TrkWidth\n",
+    "        j1_EMF = tree.j1_EMF\n",
+    "        j1_JVF = tree.j1_JVF\n",
+    "        j1_NTrk = tree.j1_NTrk \n",
+    "        j1_SumPtTrk = tree.j1_SumPtTrk\n",
+    "        # only for EM and j2.\n",
+    "        j2_FracEM3 = tree.j2_FracEM3\n",
+    "        j2_FracTile0 = tree.j2_FracTile0\n",
+    "        j2_TrkWidth = tree.j2_TrkWidth\n",
+    "        j2_EMF = tree.j2_EMF\n",
+    "        j2_JVF = tree.j2_JVF\n",
+    "        j2_NTrk = tree.j2_NTrk \n",
+    "        j2_SumPtTrk = tree.j2_SumPtTrk\n",
+    "    \n",
+    "        #=======================EMJES========================================\n",
+    "        # variables for EMJES j1.     \n",
+    "        E1_EMJES = tree.j1_EMJES_E\n",
+    "        Phi1_EMJES = tree.j1_EMJES_Phi\n",
+    "        Eta1_EMJES = tree.j1_EMJES_Eta\n",
+    "        Pt1_EMJES = tree.j1_EMJES_Pt\n",
+    "    \n",
+    "        # variables for EMJES j2.     \n",
+    "        E2_EMJES = tree.j2_EMJES_E\n",
+    "        Phi2_EMJES = tree.j2_EMJES_Phi\n",
+    "        Eta2_EMJES = tree.j2_EMJES_Eta\n",
+    "        Pt2_EMJES = tree.j2_EMJES_Pt\n",
+    "    \n",
+    "        # PtRel in EMJES\n",
+    "        Theta1_EMJES = AuxiliarFunctions.theta(Eta1_EMJES)\n",
+    "        Comp1_EMJES = AuxiliarFunctions.Componets(E1_EMJES,Eta1_EMJES,Phi1_EMJES,Theta1_EMJES)\n",
+    "        norm1_EMJES = AuxiliarFunctions.norm(Comp1_EMJES)\n",
+    "        \n",
+    "        Theta2_EMJES = AuxiliarFunctions.theta(Eta2_EMJES)\n",
+    "        Comp2_EMJES = AuxiliarFunctions.Componets(E2_EMJES,Eta2_EMJES,Phi2_EMJES,Theta2_EMJES)\n",
+    "        norm2_EMJES = AuxiliarFunctions.norm(Comp2_EMJES)\n",
+    "    \n",
+    "        # sum of components.\n",
+    "        Comp3_EMJES = AuxiliarFunctions.somaComponents(Comp1_EMJES,Comp2_EMJES)\n",
+    "        norm3_EMJES = AuxiliarFunctions.norm(Comp3_EMJES)\n",
+    "        numerador1_EMJES = AuxiliarFunctions.numerador(Comp1_EMJES,Comp3_EMJES)    \n",
+    "        angle1_EMJES = AuxiliarFunctions.alpha(numerador1_EMJES,norm1_EMJES,norm3_EMJES)\n",
+    "    \n",
+    "        #compute Relative Pt\n",
+    "        PtRel_j1_EMJES = AuxiliarFunctions.PtRelative(E1_EMJES,angle1_EMJES)\n",
+    "        #=============================================================================\n",
+    "        #=======================EMJESGSC========================================\n",
+    "        # variables for EMJESGSC j1.     \n",
+    "        E1_EMJESGSC = tree.j1_EMJESGSC_E\n",
+    "        Phi1_EMJESGSC = tree.j1_EMJESGSC_Phi\n",
+    "        Eta1_EMJESGSC = tree.j1_EMJESGSC_Eta\n",
+    "        Pt1_EMJESGSC = tree.j1_EMJESGSC_Pt\n",
+    "    \n",
+    "        # variables for EMJESGSC j2.     \n",
+    "        E2_EMJESGSC = tree.j2_EMJESGSC_E\n",
+    "        Phi2_EMJESGSC = tree.j2_EMJESGSC_Phi\n",
+    "        Eta2_EMJESGSC = tree.j2_EMJESGSC_Eta\n",
+    "        Pt2_EMJESGSC = tree.j2_EMJESGSC_Pt\n",
+    "    \n",
+    "        # PtRel in EMJESGSC\n",
+    "        Theta1_EMJESGSC = AuxiliarFunctions.theta(Eta1_EMJESGSC)\n",
+    "        Comp1_EMJESGSC = AuxiliarFunctions.Componets(E1_EMJESGSC,Eta1_EMJESGSC,Phi1_EMJESGSC,Theta1_EMJESGSC)\n",
+    "        norm1_EMJESGSC = AuxiliarFunctions.norm(Comp1_EMJESGSC)\n",
+    "    \n",
+    "        Theta2_EMJESGSC = AuxiliarFunctions.theta(Eta2_EMJESGSC)\n",
+    "        Comp2_EMJESGSC = AuxiliarFunctions.Componets(E2_EMJESGSC,Eta2_EMJESGSC,Phi2_EMJESGSC,Theta2_EMJESGSC)\n",
+    "        norm2_EMJESGC = AuxiliarFunctions.norm(Comp2_EMJESGSC)\n",
+    "    \n",
+    "        # sum of components.\n",
+    "        Comp3_EMJESGSC = AuxiliarFunctions.somaComponents(Comp1_EMJESGSC,Comp2_EMJESGSC)\n",
+    "        norm3_EMJESGSC = AuxiliarFunctions.norm(Comp3_EMJESGSC)\n",
+    "        numerador1_EMJESGSC = AuxiliarFunctions.numerador(Comp1_EMJESGSC,Comp3_EMJESGSC)    \n",
+    "        angle1_EMJESGSC = AuxiliarFunctions.alpha(numerador1_EMJESGSC,norm1_EMJESGSC,norm3_EMJESGSC)\n",
+    "    \n",
+    "        #compute Relative Pt\n",
+    "        PtRel_j1_EMJESGSC = AuxiliarFunctions.PtRelative(E1_EMJESGSC,angle1_EMJESGSC)\n",
+    "        #=============================================================================\n",
+    "        #=======================EMJESGSCMu========================================\n",
+    "        # variables for EMJESGSCMu j1.     \n",
+    "        E1_EMJESGSCMu = tree.j1_EMJESGSCMu_E\n",
+    "        Phi1_EMJESGSCMu = tree.j1_EMJESGSCMu_Phi\n",
+    "        Eta1_EMJESGSCMu = tree.j1_EMJESGSCMu_Eta\n",
+    "        Pt1_EMJESGSCMu = tree.j1_EMJESGSCMu_Pt\n",
+    "    \n",
+    "        # variables for EMJESGSCMu j2.     \n",
+    "        E2_EMJESGSCMu = tree.j2_EMJESGSCMu_E\n",
+    "        Phi2_EMJESGSCMu = tree.j2_EMJESGSCMu_Phi\n",
+    "        Eta2_EMJESGSCMu = tree.j2_EMJESGSCMu_Eta\n",
+    "        Pt2_EMJESGSCMu = tree.j2_EMJESGSCMu_Pt\n",
+    "    \n",
+    "        # PtRel in EMJESGSCMu\n",
+    "        Theta1_EMJESGSCMu = AuxiliarFunctions.theta(Eta1_EMJESGSCMu)\n",
+    "        Comp1_EMJESGSCMu = AuxiliarFunctions.Componets(E1_EMJESGSCMu,Eta1_EMJESGSCMu,Phi1_EMJESGSCMu,Theta1_EMJESGSCMu)\n",
+    "        norm1_EMJESGSCMu = AuxiliarFunctions.norm(Comp1_EMJESGSCMu)\n",
+    "    \n",
+    "        Theta2_EMJESGSCMu = AuxiliarFunctions.theta(Eta2_EMJESGSCMu)\n",
+    "        Comp2_EMJESGSCMu = AuxiliarFunctions.Componets(E2_EMJESGSCMu,Eta2_EMJESGSCMu,Phi2_EMJESGSCMu,Theta2_EMJESGSCMu)\n",
+    "        norm2_EMJESGCMu = AuxiliarFunctions.norm(Comp2_EMJESGSCMu)\n",
+    "    \n",
+    "        # sum of components.\n",
+    "        Comp3_EMJESGSCMu = AuxiliarFunctions.somaComponents(Comp1_EMJESGSCMu,Comp2_EMJESGSCMu)\n",
+    "        norm3_EMJESGSCMu = AuxiliarFunctions.norm(Comp3_EMJESGSCMu)\n",
+    "        numerador1_EMJESGSCMu = AuxiliarFunctions.numerador(Comp1_EMJESGSCMu,Comp3_EMJESGSCMu)    \n",
+    "        angle1_EMJESGSCMu = AuxiliarFunctions.alpha(numerador1_EMJESGSCMu,norm1_EMJESGSCMu,norm3_EMJESGSCMu)\n",
+    "    \n",
+    "        #compute Relative Pt\n",
+    "        PtRel_j1_EMJESGSCMu = AuxiliarFunctions.PtRelative(E1_EMJESGSCMu,angle1_EMJESGSCMu)\n",
+    "        #=============================================================================\n",
+    "        #=======================EMJESGSCMuPt========================================\n",
+    "        # variables for EMJESGSCMuPt j1.     \n",
+    "        E1_EMJESGSCMuPt = tree.j1_EMJESGSCMuPt_E\n",
+    "        Phi1_EMJESGSCMuPt = tree.j1_EMJESGSCMuPt_Phi\n",
+    "        Eta1_EMJESGSCMuPt = tree.j1_EMJESGSCMuPt_Eta\n",
+    "        Pt1_EMJESGSCMuPt = tree.j1_EMJESGSCMuPt_Pt\n",
+    "    \n",
+    "        # variables for EMJESGSCMuPt j2.     \n",
+    "        E2_EMJESGSCMuPt = tree.j2_EMJESGSCMuPt_E\n",
+    "        Phi2_EMJESGSCMuPt = tree.j2_EMJESGSCMuPt_Phi\n",
+    "        Eta2_EMJESGSCMuPt = tree.j2_EMJESGSCMuPt_Eta\n",
+    "        Pt2_EMJESGSCMuPt = tree.j2_EMJESGSCMuPt_Pt\n",
+    "    \n",
+    "        # PtRel in EMJESGSCMuPt\n",
+    "        Theta1_EMJESGSCMuPt = AuxiliarFunctions.theta(Eta1_EMJESGSCMuPt)\n",
+    "        Comp1_EMJESGSCMuPt = AuxiliarFunctions.Componets(E1_EMJESGSCMuPt,Eta1_EMJESGSCMuPt,Phi1_EMJESGSCMuPt,Theta1_EMJESGSCMuPt)\n",
+    "        norm1_EMJESGSCMuPt = AuxiliarFunctions.norm(Comp1_EMJESGSCMuPt)\n",
+    "    \n",
+    "        Theta2_EMJESGSCMuPt = AuxiliarFunctions.theta(Eta2_EMJESGSCMuPt)\n",
+    "        Comp2_EMJESGSCMuPt = AuxiliarFunctions.Componets(E2_EMJESGSCMuPt,Eta2_EMJESGSCMuPt,Phi2_EMJESGSCMuPt,Theta2_EMJESGSCMuPt)\n",
+    "        norm2_EMJESGCMuPt = AuxiliarFunctions.norm(Comp2_EMJESGSCMuPt)\n",
+    "    \n",
+    "        # sum of components.\n",
+    "        Comp3_EMJESGSCMuPt = AuxiliarFunctions.somaComponents(Comp1_EMJESGSCMuPt,Comp2_EMJESGSCMuPt)\n",
+    "        norm3_EMJESGSCMuPt = AuxiliarFunctions.norm(Comp3_EMJESGSCMuPt)\n",
+    "        numerador1_EMJESGSCMuPt = AuxiliarFunctions.numerador(Comp1_EMJESGSCMuPt,Comp3_EMJESGSCMuPt)    \n",
+    "        angle1_EMJESGSCMuPt = AuxiliarFunctions.alpha(numerador1_EMJESGSCMuPt,norm1_EMJESGSCMuPt,norm3_EMJESGSCMuPt)\n",
+    "    \n",
+    "        #compute Relative Pt\n",
+    "        PtRel_j1_EMJESGSCMuPt = AuxiliarFunctions.PtRelative(E1_EMJESGSCMuPt,angle1_EMJESGSCMuPt)\n",
+    "        #=============================================================================\n",
+    "        #=======================GENWZ========================================\n",
+    "        # variables for GENWZ j1.     \n",
+    "        E1_GENWZ = tree.j1_GENWZ_E\n",
+    "        Phi1_GENWZ = tree.j1_GENWZ_Phi\n",
+    "        Eta1_GENWZ = tree.j1_GENWZ_Eta\n",
+    "        Pt1_GENWZ = tree.j1_GENWZ_Pt\n",
+    "    \n",
+    "        # variables for GENWZ j2.     \n",
+    "        E2_GENWZ = tree.j2_GENWZ_E\n",
+    "        Phi2_GENWZ = tree.j2_GENWZ_Phi\n",
+    "        Eta2_GENWZ = tree.j2_GENWZ_Eta\n",
+    "        Pt2_GENWZ = tree.j2_GENWZ_Pt\n",
+    "    \n",
+    "        # PtRel in GENWZ\n",
+    "        Theta1_GENWZ = AuxiliarFunctions.theta(Eta1_GENWZ)\n",
+    "        Comp1_GENWZ = AuxiliarFunctions.Componets(E1_GENWZ,Eta1_GENWZ,Phi1_GENWZ,Theta1_GENWZ)\n",
+    "        norm1_GENWZ = AuxiliarFunctions.norm(Comp1_GENWZ)\n",
+    "    \n",
+    "        Theta2_GENWZ = AuxiliarFunctions.theta(Eta2_GENWZ)\n",
+    "        Comp2_GENWZ = AuxiliarFunctions.Componets(E2_GENWZ,Eta2_GENWZ,Phi2_GENWZ,Theta2_GENWZ)\n",
+    "        norm2_GENWZ = AuxiliarFunctions.norm(Comp2_GENWZ)\n",
+    "    \n",
+    "        # sum of components.\n",
+    "        Comp3_GENWZ = AuxiliarFunctions.somaComponents(Comp1_GENWZ,Comp2_GENWZ)\n",
+    "        norm3_GENWZ = AuxiliarFunctions.norm(Comp3_GENWZ)\n",
+    "        numerador1_GENWZ = AuxiliarFunctions.numerador(Comp1_GENWZ,Comp3_GENWZ)    \n",
+    "        angle1_GENWZ = AuxiliarFunctions.alpha(numerador1_GENWZ,norm1_GENWZ,norm3_GENWZ)\n",
+    "    \n",
+    "        #compute Relative Pt\n",
+    "        PtRel_j1_GENWZ = AuxiliarFunctions.PtRelative(E1_GENWZ,angle1_GENWZ)\n",
+    "        #=============================================================================\n",
+    "    #Loop em python\n",
+    "        #PT,ETA,PHI,E      1     2     3     4     5     6     7      8    9    10     11    12    13    14    15   16     17    18    19   20     21    22    23    24    25   26     27    28    29    30    31   32    33    34     35    36   37     38  \n",
+    "        text_file.write(\"%1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f\\n\"%(Pt1_EM, Eta1_EM, Phi1_EM, E1_EM, PtRel_j1_EM, j1_FracEM3, j1_FracTile0, j1_TrkWidth, j1_EMF, j1_JVF, j1_NTrk, j1_SumPtTrk, Pt1_EMJES, Eta1_EMJES, Phi1_EMJES, E1_EMJES, PtRel_j1_EMJES, Pt1_EMJESGSC, Eta1_EMJESGSC, Phi1_EMJESGSC, E1_EMJESGSC, PtRel_j1_EMJESGSC, Pt1_EMJESGSCMu, Eta1_EMJESGSCMu, Phi1_EMJESGSCMu, E1_EMJESGSCMu, PtRel_j1_EMJESGSCMu, Pt1_EMJESGSCMuPt, Eta1_EMJESGSCMuPt, Phi1_EMJESGSCMuPt, E1_EMJESGSCMuPt, PtRel_j1_EMJESGSCMuPt, Pt1_GENWZ, Eta1_GENWZ, Phi1_GENWZ, E1_GENWZ, PtRel_j1_GENWZ))\n",
+    "        text_file.write(\"%1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f %1.3f\\n\"%(Pt2_EM, Eta2_EM, Phi2_EM, E2_EM, PtRel_j1_EM, j2_FracEM3, j2_FracTile0, j2_TrkWidth, j2_EMF, j2_JVF, j2_NTrk, j2_SumPtTrk, Pt2_EMJES, Eta2_EMJES, Phi2_EMJES, E2_EMJES, PtRel_j1_EMJES, Pt2_EMJESGSC, Eta2_EMJESGSC, Phi2_EMJESGSC, E2_EMJESGSC, PtRel_j1_EMJESGSC, Pt2_EMJESGSCMu, Eta2_EMJESGSCMu, Phi2_EMJESGSCMu, E2_EMJESGSCMu, PtRel_j1_EMJESGSCMu, Pt2_EMJESGSCMuPt, Eta2_EMJESGSCMuPt, Phi2_EMJESGSCMuPt, E2_EMJESGSCMuPt, PtRel_j1_EMJESGSCMuPt, Pt2_GENWZ, Eta2_GENWZ, Phi2_GENWZ, E2_GENWZ, PtRel_j1_GENWZ))\n",
     "    \n",
     "\n",
-    "#Loop em python\n",
-    "    #text_file.write(\"%1.3f\\n\"% E1)\n",
-    "    text_file.write(\"%1.3f %1.3f \\n\"%(E1,Eta))\n",
-    "    \n",
+    "    # fim do loop\n",
     "\n",
-    "# fim do loop\n",
-    "\n",
-    "text_file.close()\n",
-    "print \"Estamos indo bem!\"\n",
-    "\n"
+    "    text_file.close()\n",
+    "    print \"Estamos indo bem fechamos \"+process+\"!\""
    ]
   }
  ],
