--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1303,6 +1303,17 @@
     "    text_file.close()\n",
     "    print \"Estamos indo bem fechamos \"+process+\"!\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "input_txt = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/TxtFiles/\""
+   ]
   }
  ],
  "metadata": {
