--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1314,6 +1314,94 @@
    "source": [
     "input_txt = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/TxtFiles/\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TCanvas::Constructor:0: RuntimeWarning: Deleting canvas with same name: C_lvbb125\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'PyROOT_NoneType' object has no attribute 'Fill'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-8381ff7abbc0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[0mMass\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdijet_LV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m             \u001b[0mh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMass\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m             \u001b[0mh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m             \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPrint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"Mass_\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mprocess\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PyROOT_NoneType' object has no attribute 'Fill'"
+     ]
+    }
+   ],
+   "source": [
+    "processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
+    "#processes = \"ZZ\"\n",
+    "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/Plots/MassPlots\"\n",
+    "\n",
+    "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#nrEvents = 10\n",
+    "\n",
+    "ylabel = \"Occurrences\"\n",
+    "\n",
+    "\n",
+    "for process in processes.split(\",\"):\n",
+    "    \n",
+    "    c = ROOT.TCanvas(\"C_\"+process,\"C_\"+process,800,600)\n",
+    "    \n",
+    "    h = ROOT.TH1F(\"Mass Histogram \"+process,\"Mass Histogram \"+process,60,0,300)\n",
+    "    \n",
+    "    data_input = data_path+\"/\"+process+\".root\"\n",
+    "    treeName = \"perevent\"\n",
+    "    file = ROOT.TFile(data_input,\"READ\")\n",
+    "    tree = file.Get(treeName)\n",
+    "    nrEvents = tree.GetEntries()\n",
+    "    \n",
+    "    Corrections = [\"GENWZ\"]\n",
+    "\n",
+    "    for (j,Correction) in enumerate(Corrections):\n",
+    "        for (i,entry) in enumerate(tree):\n",
+    "            if nrEvents>0:\n",
+    "                if i>nrEvents:\n",
+    "                    break\n",
+    "                    \n",
+    "            j1_LV = ROOT.TLorentzVector()\n",
+    "            j2_LV = ROOT.TLorentzVector()\n",
+    "            \n",
+    "        \n",
+    "            E1 = getattr(entry,\"j1_\"+Correction+\"_E\")\n",
+    "            Eta1 = getattr(entry,\"j1_\"+Correction+\"_Eta\")\n",
+    "            Phi1 = getattr(entry,\"j1_\"+Correction+\"_Phi\")\n",
+    "            Pt1 = getattr(entry,\"j1_\"+Correction+\"_Pt\")\n",
+    "            \n",
+    "            E2 = getattr(entry,\"j2_\"+Correction+\"_E\")\n",
+    "            Eta2 = getattr(entry,\"j2_\"+Correction+\"_Eta\")\n",
+    "            Phi2 = getattr(entry,\"j2_\"+Correction+\"_Phi\")\n",
+    "            Pt2 = getattr(entry,\"j2_\"+Correction+\"_Pt\")\n",
+    "            \n",
+    "            j1_LV.SetPtEtaPhiE(Pt1,Eta1,Phi1,E1)\n",
+    "            j2_LV.SetPtEtaPhiE(Pt2,Eta2,Phi2,E2)\n",
+    "            \n",
+    "            dijet_LV = j1_LV + j1_LV\n",
+    "            \n",
+    "            Mass = dijet_LV.M()\n",
+    "            \n",
+    "            h.Fill(Mass)\n",
+    "            h.Draw()\n",
+    "            c.Print(output+\"/\"+\"Mass_\"+process)\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
