Problem not solved

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1317,18 +1317,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TCanvas::Constructor:0: RuntimeWarning: Deleting canvas with same name: C_lvbb125\n"
-     ]
-    },
     {
      "ename": "AttributeError",
      "evalue": "'PyROOT_NoneType' object has no attribute 'Fill'",
@@ -1336,12 +1329,23 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-8381ff7abbc0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[0mMass\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdijet_LV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m             \u001b[0mh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMass\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m             \u001b[0mh\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m             \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPrint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"Mass_\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mprocess\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-16-263c0a736878>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m             \u001b[1;31m#print \"Mass\", Mass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 80\u001b[1;33m             \u001b[0mMass_h\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMass\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     81\u001b[0m             \u001b[0mMass_h\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m             \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPrint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"Mass_\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mprocess\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'PyROOT_NoneType' object has no attribute 'Fill'"
      ]
     }
    ],
    "source": [
+    "import ROOT\n",
+    "import copy\n",
+    "#from NeuralNetwork import MultiLayerPerceptron as mlp\n",
+    "from functions import HistogramFunctions,AuxiliarFunctions,FigureFunctions,FitFunctions,rootnotes\n",
+    "\n",
+    "\n",
+    "ROOT.gROOT.Reset()\n",
+    "ROOT.gStyle.SetOptStat(0)\n",
+    "\n",
+    "\n",
+    "\n",
     "processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
     "#processes = \"ZZ\"\n",
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/Plots/MassPlots\"\n",
@@ -1358,15 +1362,27 @@
     "\n",
     "for process in processes.split(\",\"):\n",
     "    \n",
-    "    c = ROOT.TCanvas(\"C_\"+process,\"C_\"+process,800,600)\n",
     "    \n",
-    "    h = ROOT.TH1F(\"Mass Histogram \"+process,\"Mass Histogram \"+process,60,0,300)\n",
+    "    list_h = []\n",
+    "    list_color = []\n",
+    "    \n",
+    "    list_color.append(ROOT.kBlue) # For truth\n",
+    "    \n",
+    "    c = rootnotes.canvas(\"c_\"+process, (800, 600))\n",
+    "    \n",
+    "    h_info = HistogramFunctions.OneDimHistInfo(\"Mass Histogram \"+process,\"Mass Histogram \"+process,60 , 0,300,\" Mass [GeV] \",'Entries')\n",
+    "    list_h.append(h_info)\n",
+    "    \n",
+    "    Mass_h = HistogramFunctions.CreateListOf1DHistograms(list_h,list_color)\n",
+    "    #h = ROOT.TH1F(\"Mass Histogram \"+process,\"Mass Histogram \"+process,60 , 0,300)\n",
+    "    #h = ROOT.TH1F(\"Mass Histogram\",\"Mass Histogram\",60,0,300)\n",
     "    \n",
     "    data_input = data_path+\"/\"+process+\".root\"\n",
     "    treeName = \"perevent\"\n",
     "    file = ROOT.TFile(data_input,\"READ\")\n",
     "    tree = file.Get(treeName)\n",
-    "    nrEvents = tree.GetEntries()\n",
+    "    #nrEvents = tree.GetEntries()\n",
+    "    nrEvents = 2\n",
     "    \n",
     "    Corrections = [\"GENWZ\"]\n",
     "\n",
@@ -1397,10 +1413,11 @@
     "            \n",
     "            Mass = dijet_LV.M()\n",
     "            \n",
-    "            h.Fill(Mass)\n",
-    "            h.Draw()\n",
+    "            #print \"Mass\", Mass\n",
+    "            Mass_h[0].Fill(Mass)\n",
+    "            Mass_h[0].Draw()\n",
     "            c.Print(output+\"/\"+\"Mass_\"+process)\n",
-    "            "
+    "            c"
    ]
   }
  ],
