Save a npy file

--- a/StatisticalAnalysis.ipynb
+++ b/StatisticalAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -41,17 +41,18 @@
        "          6.82103906e+01,   5.50991584e+01,   5.35117266e+01]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.externals import joblib\n",
     "#Use ROOT in order to create a numpy array with selected variables\n",
     "\n",
     "#processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
     "processes = \"lvbb125\"\n",
-    "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/TxtFiles\"\n",
+    "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/DataFiles\"\n",
     "\n",
     "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
     "\n",
@@ -130,7 +131,8 @@
     "            data = dataBuffer\n",
     "        else:\n",
     "            data = np.append(data,dataBuffer, axis=0)\n",
-    "        \n",
+    "    np.save(output+\"/\"+process+\"Array\",data)\n",
+    "    #joblib.dump(data,output+\"/\"+process+\"Array\")\n",
     "\n",
     "data"
    ]
@@ -155,7 +157,9 @@
    ],
    "source": [
     "# Confirm our array shape\n",
-    "data.shape"
+    "signal = np.load(output+\"/\"+\"lvbb125Array.npy\")\n",
+    "\n",
+    "signal.shape"
    ]
   },
   {
