--- a/NeuralAnalysis.ipynb
+++ b/NeuralAnalysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -42,28 +42,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(191100, 13)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(191100, 13)"
+       "array([[  9.52196307e-03,   6.12077856e-05,   1.65209174e-02, ...,\n",
+       "          9.21870469e+01,   5.98104895e+01,   6.10195977e+01],\n",
+       "       [  1.67018827e-02,   1.13179535e-01,   9.47747454e-02, ...,\n",
+       "          1.07602320e+02,   5.98104895e+01,   6.44654687e+01],\n",
+       "       [  8.95111356e-03,   9.14592529e-05,   8.82276613e-03, ...,\n",
+       "          3.70010500e+02,   4.97765697e+01,   1.06724656e+02],\n",
+       "       ..., \n",
+       "       [  1.62160210e-02,   5.48769441e-03,   2.28184238e-02, ...,\n",
+       "          3.86259570e+01,   3.57536859e+01,   3.39022539e+01],\n",
+       "       [  1.42509257e-02,   1.21706940e-01,   4.58930284e-02, ...,\n",
+       "          1.07292875e+02,   5.50991584e+01,   9.68779375e+01],\n",
+       "       [  1.58070903e-02,   4.79239076e-02,   1.20003656e-01, ...,\n",
+       "          6.82103906e+01,   5.50991584e+01,   5.35117266e+01]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Confirm our array shape\n",
+    "data = np.load(\"/home/micael/MyWorkspace/DATA/lvbb125Array.npy\")\n",
+    "data_target = data[:,12:13]\n",
     "\n",
-    "data_target = data[:,13]\n",
-    "\n",
-    "data.shape"
+    "data_inputs = data[:,0:12]\n",
+    "print data.shape\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(191100, 12)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  9.52196307e-03,   6.12077856e-05,   1.65209174e-02, ...,\n",
+       "         -1.83297706e+00,   9.21870469e+01,   5.98104895e+01],\n",
+       "       [  1.67018827e-02,   1.13179535e-01,   9.47747454e-02, ...,\n",
+       "          1.78017831e+00,   1.07602320e+02,   5.98104895e+01],\n",
+       "       [  8.95111356e-03,   9.14592529e-05,   8.82276613e-03, ...,\n",
+       "          5.18436611e-01,   3.70010500e+02,   4.97765697e+01],\n",
+       "       ..., \n",
+       "       [  1.62160210e-02,   5.48769441e-03,   2.28184238e-02, ...,\n",
+       "         -2.27387905e+00,   3.86259570e+01,   3.57536859e+01],\n",
+       "       [  1.42509257e-02,   1.21706940e-01,   4.58930284e-02, ...,\n",
+       "         -1.46886933e+00,   1.07292875e+02,   5.50991584e+01],\n",
+       "       [  1.58070903e-02,   4.79239076e-02,   1.20003656e-01, ...,\n",
+       "         -3.02542996e+00,   6.82103906e+01,   5.50991584e+01]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print data_inputs.shape\n",
+    "data_inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(191100, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  61.01959766],\n",
+       "       [  64.46546875],\n",
+       "       [ 106.72465625],\n",
+       "       ..., \n",
+       "       [  33.90225391],\n",
+       "       [  96.8779375 ],\n",
+       "       [  53.51172656]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print data_target.shape\n",
+    "data_target"
    ]
   },
   {
