--- a/NeuralAnalysis.ipynb
+++ b/NeuralAnalysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
        "          6.82103906e+01,   5.50991584e+01,   5.35117266e+01]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,14 +82,14 @@
     "data = np.load(\"/home/micael/MyWorkspace/DATA/lvbb125Array.npy\")\n",
     "data_target = data[:,12]\n",
     "\n",
-    "data_inputs = data[:,0:12]\n",
+    "data_inputs = data[:,:12]\n",
     "print data.shape\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +119,7 @@
        "         -3.02542996e+00,   6.82103906e+01,   5.50991584e+01]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
        "         96.8779375 ,   53.51172656])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,26 +162,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Theano backend.\n",
-      "/home/micael/.virtualenvs/MyAnalysis/local/lib/python2.7/site-packages/sklearn/cross_validation.py:516: Warning: The least populated class in y has only 1 members, which is too few. The minimum number of labels for any class cannot be less than n_folds=2.\n",
-      "  % (min_labels, self.n_folds)), Warning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CVO\n",
+      "[171081  99660  41931 ..., 150696  62287 161462] index good\n",
       "All Right!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/micael/.virtualenvs/MyAnalysis/lib/python2.7/site-packages/ipykernel/__main__.py:36: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n"
      ]
     }
    ],
@@ -211,11 +211,33 @@
     "train_info['n_inits'] = n_inits\n",
     "train_info['norm'] = norm\n",
     "\n",
+    "print \"CVO\"\n",
     "\n",
+    "#CVO = cross_validation.StratifiedKFold(data_target, train_info['n_folds'])\n",
     "\n",
-    "CVO = cross_validation.StratifiedKFold(data_target, train_info['n_folds'])\n",
-    "CVO = list(CVO)\n",
-    "train_info['CVO'] = CVO\n",
+    "#print \"FIM CVO\"\n",
+    "\n",
+    "#CVO = list(CVO)\n",
+    "#train_info['CVO'] = CVO\n",
+    "\n",
+    "#CVO.train = \n",
+    "test_index = np.random.randint(0, data_target.shape[0]-1, np.floor(0.1*data_target.shape[0])) \n",
+    "\n",
+    "print test_index, \"index good\"\n",
+    "\n",
+    "#for ifold in range(train_info['n_folds']):\n",
+    "#    print \"COMECOU FOR\"\n",
+    "#    train_id, test_id = CVO[ifold]\n",
+    "    \n",
+    "    # normalize data based in train set\n",
+    "#    if train_info['norm'] == 'mapstd':\n",
+    "#        scaler = preprocessing.StandardScaler().fit(data_inputs[train_id,:])\n",
+    "#    elif train_info['norm'] == 'mapstd_rob':\n",
+    "#        scaler = preprocessing.RobustScaler().fit(data_inputs[train_id,:])\n",
+    "#    elif train_info['norm'] == 'mapminmax':\n",
+    "#        scaler = preprocessing.MinMaxScaler().fit(data_inputs[train_id,:])\n",
+    "        \n",
+    "    #norm_all_data = scaler.transform(data_input)\n",
     "\n",
     "\n",
     "print \"All Right!\""
